--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.12",
     "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.7",
     "vue2-smooth-scroll": "^1.5.0"
   },
   "devDependencies": {
