Ajout de l'heure

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@splidejs/splide": "^3.3.1",
+    "@splidejs/vue-splide": "^0.5.7",
     "aos": "^2.3.4",
+    "hooper": "^0.3.4",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "rellax": "^1.12.1",
@@ -21,6 +24,7 @@
     "vue-loading-overlay": "^3.4.2",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.0.1",
+    "vue-slick-carousel": "^1.0.6",
     "vue2-google-maps": "^0.10.7",
     "vue2-smooth-scroll": "^1.5.0"
   },
@@ -56,6 +60,7 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-concise-slider": "^4.2.3",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
