--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "portfolio.1",
+  "name": "InnoceanDashBoard",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Tristan Seclet <tristanseclet@gmail.com>",
+  "author": "Adrien Bouteiller <adrien.bouteiller01@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
