--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "rellax": "^1.12.1",
+    "slither-slider": "^2.11.0",
     "vue": "^2.6.12",
     "vue-loading-overlay": "^3.4.2",
     "vue-moment": "^4.1.0",
