--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^2.3.4",
     "axios": "^0.24.0",
     "hooper": "^0.3.4",
+    "marker-clusterer-plus": "^2.1.4",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "rellax": "^1.12.1",
@@ -27,6 +28,7 @@
     "vue-moment": "^4.1.0",
     "vue-router": "^3.0.1",
     "vue-slick-carousel": "^1.0.6",
+    "vue2-gmap-custom-marker": "^6.0.1",
     "vue2-google-maps": "^0.10.7",
     "vue2-smooth-scroll": "^1.5.0"
   },
