dayjs et twitter dark
dayjs + twitter dark

--- a/package.json
+++ b/package.json
@@ -17,17 +17,14 @@
     "@splidejs/vue-splide": "^0.5.10",
     "aos": "^2.3.4",
     "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "granim": "^2.0.0",
     "hooper": "^0.3.4",
     "marker-clusterer-plus": "^2.1.4",
-    "moment": "^2.29.1",
-    "moment-duration-format": "^2.3.2",
-    "moment-timezone": "^0.5.34",
     "rellax": "^1.12.1",
     "slither-slider": "^2.11.0",
     "vue": "^2.6.12",
     "vue-loading-overlay": "^3.4.2",
-    "vue-moment": "^4.1.0",
     "vue-router": "^3.0.1",
     "vue-slick-carousel": "^1.0.6",
     "vue2-gmap-custom-marker": "^6.0.1",
