beacoup trop de changement mais il y a un back-end en plus en gros

--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "dayjs": "^1.10.7",
     "granim": "^2.0.0",
     "hooper": "^0.3.4",
+    "img": "^3.0.3",
     "marker-clusterer-plus": "^2.1.4",
     "rellax": "^1.12.1",
-    "slither-slider": "^2.11.0",
+    "swiffy-slider": "^1.2.0",
     "vue": "^2.6.12",
     "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.0.1",
     "vue-slick-carousel": "^1.0.6",
     "vue2-gmap-custom-marker": "^6.0.1",
     "vue2-google-maps": "^0.10.7",
-    "vue2-smooth-scroll": "^1.5.0"
+    "vuejs-twitter-feed": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -48,6 +49,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^8.0.1",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -69,7 +71,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
