ajout des informations

--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "granim": "^2.0.0",
     "hooper": "^0.3.4",
     "img": "^3.0.3",
+    "infinite-marquee": "^1.0.7",
     "marker-clusterer-plus": "^2.1.4",
+    "marquee-infinite": "^0.0.4",
     "rellax": "^1.12.1",
     "swiffy-slider": "^1.2.0",
     "vue": "^2.6.12",
     "vue-loading-overlay": "^3.4.2",
+    "vue-marquee-text-component": "^1.2.0",
     "vue-router": "^3.0.1",
     "vue-slick-carousel": "^1.0.6",
     "vue2-gmap-custom-marker": "^6.0.1",
