--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "marker-clusterer-plus": "^2.1.4",
     "marquee-infinite": "^0.0.4",
     "rellax": "^1.12.1",
+    "siema": "^1.5.1",
     "swiffy-slider": "^1.2.0",
+    "swiper": "^8.0.7",
     "vue": "^2.6.12",
     "vue-loading-overlay": "^3.4.2",
     "vue-marquee-text-component": "^1.2.0",
@@ -69,6 +71,7 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "v-siema": "^0.0.6",
     "vue-concise-slider": "^4.2.3",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
